# spendenbarometer

./: README.md  dokumentation  pyproject.toml
backend/: db.sqlite3  manage.py
backend/taschengeld/: asgi.py  settings.py
backend/taschengeldapp/: admin.py  api.py  apps.py  forms.py  models.py  urls.py  views.py
backend/taschengeldapp/migrations/: 0001_initial.py  0002_auto_20220105_2044.py  0008_alter_buchung_beschreibung.py  0009_alter_buchung_konto.py
backend/taschengeldapp/templates/taschengeldapp/: neuer_eintrag.html
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  hooks.js
frontend/src/components/: Buchung.svelte  BuchungForm.svelte  Button.svelte  KontoCard.svelte  KontoListElement.svelte  createNewAccount.svelte  graph.svelte  nav.svelte  smallCard.svelte
frontend/src/components/icons/: ArrowLeft.svelte
frontend/src/routes/: [id].svelte  [kontoname].svelte  __error.svelte  __layout.svelte  barometer.svelte  index.svelte  list.svelte  login.svelte
frontend/src/stores/: BuchungStore.js  data_store.js
frontend/static/data/: MOCK_DATA.json
frontend/taschengeld/: db.sqlite3
frontend/taschengeld/taschengeld/: settings.py  urls.py  wsgi.py
frontend/taschengeld/taschengeldapp/: admin.py  forms.py  models.py  urls.py  views.py
frontend/taschengeld/taschengeldapp/migrations/: 0003_auto_20220105_2210.py  0004_auto_20220105_2239.py  0005_remove_buchung_ausgabe.py  0006_alter_buchung_buchungsdatum_and_more.py  0007_alter_buchung_options_alter_konto_options.py
(+2 files in other folders)
