[tool.poetry]
name = "taschengeldapp"
version = "0.1.0"
description = ""
authors = ["y"]

[tool.poetry.dependencies]
python = "^3.8"
django = "<4"
django-environ = "*"
django-moneyfield = "^0.2.1"
restless = "^2.2.0"
django-cors-headers = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"
black = "*"
django-extensions = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
